add rough structure

--- a/starcode_PythonKI_02.ipynb
+++ b/starcode_PythonKI_02.ipynb
@@ -204,10 +204,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of function"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<span style=\"color: #EB6ECB;\">Task 2.x:</span>** **"
+    "**<span style=\"color: #EB6ECB;\">Task 2.x:</span>** *Create a function where the AI assistant greets the user based on the time of day.*"
    ]
   },
   {
@@ -220,10 +229,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet_user(name, hour):\n",
+    "    if hour < 12:\n",
+    "        greeting = f\"Good morning, {name}!\"\n",
+    "    elif hour < 18:\n",
+    "        greeting = f\"Good afternoon, {name}!\"\n",
+    "    else:\n",
+    "        greeting = f\"Good evening, {name}!\"\n",
+    "    return greeting"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<span style=\"color: #EB6ECB;\">Task 2.x:</span>** **"
+    "**<span style=\"color: #EB6ECB;\">Task 2.x:</span>** *Function to convert units*"
    ]
   },
   {
@@ -233,6 +258,21 @@
    "outputs": [],
    "source": [
     "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_temperature(value, unit):\n",
+    "    if unit == 'C':\n",
+    "        return (value * 9/5) + 32  # Convert Celsius to Fahrenheit\n",
+    "    elif unit == 'F':\n",
+    "        return (value - 32) * 5/9  # Convert Fahrenheit to Celsius\n",
+    "    else:\n",
+    "        return \"Invalid unit. Please use 'C' for Celsius or 'F' for Fahrenheit.\""
    ]
   }
  ],
