--- a/starcode_PythonKI_03.ipynb
+++ b/starcode_PythonKI_03.ipynb
@@ -27,8 +27,10 @@
     "* numpy\n",
     "    * intro to why handling large amounts of data is important, especially in AI (data = fuel for ML algorithms) --> working with plain lists can be inefficient, which is where libraries like numpy come in\n",
     "    * basic operations (create multidimensional arrays, perform basic maths)\n",
-    "    * matrix manipulation as core concept of NN (e.g. do some operations on a 2D matrix)\n",
-    "* ? matplotlib ? how relevant is matplotlib for the rest of the course? maybe it would make more sense to introduce another library which will be used laer on in the course\n",
+    "    * matrix manipulation as core concept of NN (e.g. do some operations on a 2D matrix); mention >3D matrices' importance\n",
+    "* pandas\n",
+    "    * short intro to pandas\n",
+    "* matplotlib ? how relevant is matplotlib for the rest of the course? maybe it would make more sense to introduce another library which will be used laer on in the course\n",
     "    * visualising data as crucial step in understanding your data\n",
     "    * basic line & scatter plots\n",
     "    * more advanced plotting (histograms, heatmaps, ...)\n",
@@ -36,7 +38,7 @@
     "* Data I/O\n",
     "    * read from and write to files (csv, txt)\n",
     "    * introduce the open() function\n",
-    "* ? OOP ? is this relevant for Python KI course? I might just leave it out otherwise"
+    "* Bonus: OOP (Basics)"
    ]
   },
   {
@@ -50,28 +52,428 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: #9C68C8;\">NumPy</span>"
+    "As you may remember, Python libraries are collections of pre-written code that you can use to save time and make your programs more powerful. Instead of writing everything from scratch time and time again, you can use libraries to perform specific tasks, like working with data or creating visualizations, quickly and efficiently. They’re like tools in a toolbox, helping you build faster and better! And luckily, we can borrow those tools from developers all over the world.\n",
+    "\n",
+    "*xxx some further explanation of libraries, their import, etc.*\n",
+    "\n",
+    "To get started with the topic of libraries, we will work with a library called `doglib`. First: let's install it with Pip!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install doglib"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: #9C68C8;\">Matplotlib</span>"
+    "🔎 <span style=\"color: #2E88B6;\"> The exclamation point `!` next to `pip install` is necessary for Jupyter to know that the following command should be executed in the command line. The command line is a text-based interface where you can type commands to interact directly with your computer, run programs, and manage files. </span>\n",
+    "\n",
+    "Alright, we now have installed `doglib`. But before we can actually use it, we must import it into our workspace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import doglib"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: #9C68C8;\">Data I/O</span>"
+    "recap task; is doglib suitable for this? I think it's mostly in German, maybe I'll have to switch\n",
+    "\n",
+    "**<span style=\"color: #EB6ECB;\">Task 3.1:</span>** *xxx*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: #9C68C8;\">Object Oriented Programming (OOP)</span>"
+    "For better structure, a lot of packages are organised into several sub-packages, which represent different functionalities of a single big package. Sub-packages are like folders inside a bigger folder in a library, helping organize related tools and functions so it’s easier to find and use exactly what you need. We can import them separately if we don't need the functionalities of the entire package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from doglib import catlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same syntax (so `from ... import ...`) can also be used to import specific functions from a library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from doglib import umrechnung_futtergewicht_in_tassen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, to make our code even cleaner, we can set 'nicknames' for our imported packages. Programmers can be a little bit lazy sometimes, and some package names are just so long... Who has the time to type out 'doglib' every single time?! So a simple trick is to import your packages with `import ... as ...`, where we set the nickname for our package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import doglib as dl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can abbreviate `doglib` as `dl` every time we want to use it! So let's practice:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.2:</span>** *another practice task with the doglib library*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*add some more info on packages/libraries, look at week5 of python basics for inspo*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #9C68C8;\">NumPy</span>\n",
+    "\n",
+    "So now that it's fresh in everyone's memory what a library is, what it's used for and how we can work with it, let's look at one of Python's most important libraries: **NumPy**. \n",
+    "\n",
+    "**NumPy** (short for numerical Python) is a Python library that makes it easy to work with numbers and data in a structured way, especially for doing math with large sets of numbers. It’s great for handling arrays, which are like powerful lists, and performing fast calculations like adding, multiplying, or analyzing data.\n",
+    "\n",
+    "Before we can dive in to the wonders of NumPy, we have to install and import it first. A widespread nickname for NumPy is `np`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import NumPy with the nickname 'np' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*intro to arrays with some examples; intro to why handling large amounts of data is important, especially in AI (data = fuel for ML algorithms) --> working with plain lists can be inefficient, which is where libraries like numpy come in*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.x:</span>** *create your own 1D array*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*indexing*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*multidimensional arrays; example with 2 and 3-D array; mention importance of multidimensional matrices in AI/ML; matrix manipulation as core concept of NN*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.x:</span>** *create 2D matrix; task on matrix manipulation?*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #9C68C8;\">Pandas</span>\n",
+    "\n",
+    "So now that we've been briefly introduced to NumPy, we can move on to another library, built on top of NumPy, but better for working wth structured data (like rows and columns in a table): `Pandas`. \n",
+    "\n",
+    "While NumPy is great for working with numerical data in arrays, it's mainly focused on fast math and large-scale numerical computations. Pandas on the other hand is better for organizing, exploring and analyzing data. It helps us cleaning up messy data, perform calculations or find patterns within the data. Pandas is our tool to make our data more organized and easy to work with!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step is of course to install and import Pandas. Its commonly used nickname is `pd`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Pandas with the nickname 'pd' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data structure we usually work with in Pandas is called a **dataframe**. It's like a table, with rows and columns, where each column can hold a different type of data (like numbers, text or dates), and you can easily organize, analyze and manipulate the data in your dataframe.\n",
+    "\n",
+    "Let's create one of those and see how they work!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# raw data\n",
+    "data = {\n",
+    "    'Name': ['Emma', 'Tom', 'Sophie'],\n",
+    "    'Age': [15, 14, 15],\n",
+    "    'Height': [1.67, 1.72, 1.59]\n",
+    "}\n",
+    "\n",
+    "# transform the raw data into a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# display the DataFrame\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can perform basic analysis on our dataframe, such as calculating the mean for a row, or giving the counts per unique value for a column. Of course, there are many more and much more complex operations we can perform on these data structures, but these will be introduced later, when you need them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# basic operations\n",
+    "print(df['Height'].mean())  # Average height\n",
+    "print(df['Age'].value_counts())  # Count of each age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.x:</span>** *task with pandas*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #9C68C8;\">Matplotlib</span>\n",
+    "\n",
+    "Matplotlib is a Python library that lets you create visualizations, like graphs and charts, from your data. It’s like turning numbers into pictures, so you can easily see patterns or trends.\n",
+    "\n",
+    "First steps are, as always, install & import."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Matplotlib with the nickname 'plt' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a lot of different types of vizualizations you can plot with Matplotlib, but we'll focus on line graphs and scatter plots today. They are the simplest and most commonly used ones, and you will need them later on in the course as well, when you try to analyze your data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example for line graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.x:</span>** *task with line graphs*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example for scatter plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: #EB6ECB;\">Task 3.x:</span>** *task with scatter plot*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #9C68C8;\">Data I/O</span>\n",
+    "\n",
+    "Data I/O stands for Data Input/Output. This is how we get data into and out of our programs. Input is when you bring data in, like reading from a file or a database, and Output is when you save or share the results, like writing data to a file or showing it on the screen. It's like receiving and sending messages between your program and the outside world!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# xx what i/o do you need them to know?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #9C68C8;\">Bonus: Object Oriented Programming (OOP)</span>"
    ]
   },
   {
